SERVER-48200 RandomCursor should explicitly check for EBUSY when opening a WT cursor